fixed issue with hamburger button on iphones; fixed issue with transparency while menu is open

--- a/src/barsandbuttons.css
+++ b/src/barsandbuttons.css
@@ -122,6 +122,7 @@
     left: 0px;
     top: 70px;
     opacity: 0.95;
+    z-index: 15;
   }
 
   .mobileMenuDiv {
