--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ p {
   border: 1px solid black;
   color: white;
   font-size: 30px;
-  z-index: 100;
+  z-index: 1;
 }
 .rightButton {
   position: absolute;
@@ -77,7 +77,7 @@ p {
   border: 1px solid black;
   color: white;
   font-size: 30px;
-  z-index: 100;
+  z-index: 1;
   opacity: 0.8;
 }
 .topButton {
@@ -87,7 +87,7 @@ p {
   border: 1px solid black;
   color: white;
   font-size: 30px;
-  z-index: 100;
+  z-index: 1;
   border-radius: 8px;
 }
 .bottomButton {
@@ -97,8 +97,12 @@ p {
   border: 1px solid black;
   color: white;
   font-size: 30px;
-  z-index: 100;
+  z-index: 1;
   border-radius: 8px;
+}
+
+.carousel-indicators {
+  z-index: 1 !important;
 }
 
 /* End Misc */
